Resolved Update changes

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                   <h2><a href="#">Create an Account</a></h2>
                   <p>
                     Register with Chefe and create your profile. You can browse
-                    listings and post your own meals.
+                    listings and post your food items
                   </p>
                 </div>
               </div>
@@ -214,8 +214,8 @@
                 <div class="tb-servise-text">
                   <h2><a href="#">Post Your Meal</a></h2>
                   <p>
-                    List your meal with a brief description, price, and pickup
-                    location. You can choose to sell or donate it.
+                    List your food item with brief descriptions, price and
+                    pickup location. You can choose to sell or donate
                   </p>
                 </div>
               </div>
@@ -226,7 +226,7 @@
                   <i class="icofont-search"></i>
                 </div>
                 <div class="tb-servise-text">
-                  <h2><a href="#">Find Your Perfect Meal</a></h2>
+                  <h2><a href="#">Find your perfect food item</a></h2>
                   <p>
                     Browse listings in your area or filter by type of cuisine or
                     dietary restrictions. Reserve a meal that you want to buy or
@@ -272,7 +272,7 @@
           </div>
           <div class="col-lg-6 col-md-12">
             <div class="card mb-1">
-              <h5 class="card-header">1. Select Your Dish</h5>
+              <h5 class="card-header">1. Select Your food</h5>
               <div class="card-body">
                 <p class="card-text">
                   Choose a dish that you want to sell or donate on Chefe.
@@ -292,9 +292,9 @@
               <h5 class="card-header">3. Share the Details</h5>
               <div class="card-body">
                 <p class="card-text">
-                  Include a description of your dish and any dietary
-                  restrictions. Let potential buyers know what makes your dish
-                  special.
+                  Include a description of your food, expiration date ( if
+                  grocery ) and any dietary restrictions. Let potential buyers
+                  know what makes your dish special.
                 </p>
               </div>
             </div>
@@ -387,15 +387,38 @@
                     />
                   </div>
                   <div class="tb-testimonial-user-text">
-                    <h2>Shedrack Erugo</h2>
-                    <p>CEO - Founder</p>
+                    <h2>Dr. Shedrack Erugo</h2>
+                    <p>Founder/CEO</p>
+                </div>
+
+                 <a href="mailto:thechefefoodmedia@gmail.com" class="p-1"
+                          style="text-decoration:auto;color: #b3182e;font-size: 40px;display: inline-block;">
+                            <i class="icofont-ui-message"></i>
+                          </a>
+                          <a href="https://www.facebook.com/shedrack.erugo" class="p-1"
+                          style="text-decoration:auto;color: #b3182e;font-size: 40px;display: inline-block;">
+                            <i class="icofont-facebook"></i>
+                          </a>
+                           <a href="https://www.facebook.com/shedrack.erugo" class="p-1"
+                          style="text-decoration:auto;color: #b3182e;font-size: 40px;display: inline-block;">
+                            <i class="icofont-instagram"></i>
+                          </a>
+                           <a href="https://www.facebook.com/shedrack.erugo" class="p-1"
+                          style="text-decoration:auto;color: #b3182e;font-size: 40px;display: inline-block;">
+                            <i class="icofont-linkedin"></i>
+                          </a>
+                           <a href="https://www.facebook.com/shedrack.erugo" class="p-1"
+                          style="text-decoration:auto;color: #b3182e;font-size: 40px;display: inline-block;">
+                            <i class="icofont-twitter"></i>
+                          </a>
                   </div>
                 </div>
                 <div class="tb-testimonial-text">
                   <p>
-                    A medical doctor who decided not to practice anymore and
-                    want to change the way we eat . I am multilingual , author
-                    and enjoy cooking, reading.
+                    "I invite you on a journey, To a future where food wastage is
+                    history, A world where all can have access to a meal, We can
+                    only do this as a community, So let’s join hands and fight
+                    this plague before it smites us"
                   </p>
                 </div>
               </div>
