--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 />
                 <p>
                   Chefe is a unique platform where users can sell or donate food
-                  to reduce waste and enable people to enjoy homemade food
+                  to reduce waste and enable people to enjoy the food
                   without breaking the bank. Join the community today and share
                   your delicious meals with others!
                 </p>
