Update meal to food

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
                 <p>
                   Chefe is a unique platform where users can sell or donate food
                   to reduce waste and enable people to enjoy the food
-                  without breaking the bank. Join the community today and share
-                  your delicious meals with others!
+                  without breaking the bank. Join the community today and
+                 share your delicious meals, groceries , fruits, veggies etc with others.
                 </p>
                 <a href="#" class="btn-primary">Sign up</a>
               </div>
@@ -143,9 +143,9 @@
                 />
                 <p>
                   Chefe is a unique platform where users can sell or donate food
-                  to reduce waste and enable people to enjoy homemade food
-                  without breaking the bank. Join the community today and share
-                  your delicious meals with others!
+                  to reduce waste and enable people to enjoy the food
+                  without breaking the bank. Join the community today and
+                 share your delicious meals, groceries , fruits, veggies etc with others.
                 </p>
                 <a href="#" class="btn-primary">Sign up</a>
               </div>
@@ -212,7 +212,7 @@
                   <i class="icofont-restaurant"></i>
                 </div>
                 <div class="tb-servise-text">
-                  <h2><a href="#">Post Your Meal</a></h2>
+                  <h2><a href="#">Post your food item</a></h2>
                   <p>
                     List your food item with brief descriptions, price and
                     pickup location. You can choose to sell or donate
