Update new changes as per suggestion

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       <div class="tb-servise-cms">
         <div class="container">
           <div class="tb-custom-title pb-5">
-            <h2>How it's work?</h2>
+            <h2>How it work?</h2>
           </div>
           <div class="row">
             <!-- create new steeper to display information of how our social media work in 4 step with responsive line of horizontal and vertical-->
@@ -256,21 +256,7 @@
     <section id="tb-special-cms">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6 col-md-12">
-            <div class="tb-special-section">
-              <span class="tb-special-text1" style="color: black">Food</span>
-              <h2>Selling</h2>
-              <span class="tb-special-text2" style="color: black"
-                >with Chefe</span
-              >
-              <p>
-                Are you an aspiring chef or cooking enthusiast? Share your
-                culinary creations with the world through Chefe.
-              </p>
-              <!-- create 4 block  -->
-            </div>
-          </div>
-          <div class="col-lg-6 col-md-12">
+           <div class="col-lg-6 col-md-12">
             <div class="card mb-1">
               <h5 class="card-header">1. Select Your food</h5>
               <div class="card-body">
@@ -284,7 +270,7 @@
               <div class="card-body">
                 <p class="card-text">
                   Set the price for your dish. You can choose to sell it at cost
-                  or for a profit.
+                  for a profit.
                 </p>
               </div>
             </div>
@@ -306,6 +292,20 @@
                   the meal.
                 </p>
               </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-12">
+            <div class="tb-special-section">
+              <span class="tb-special-text1" style="color: black">Food</span>
+              <h2>Selling</h2>
+              <span class="tb-special-text2" style="color: black"
+                >with Chefe</span
+              >
+              <p>
+                Are you an aspiring chef or cooking enthusiast? Share your
+                culinary creations with the world through Chefe.
+              </p>
+              <!-- create 4 block  -->
             </div>
           </div>
         </div>
