Shake changes minor update

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="index.html#tb-servise-cms"
-                      >How it's work</a
+                      >How it works</a
                     >
                   </li>
                   <li class="nav-item">
@@ -188,7 +188,7 @@
       <div class="tb-servise-cms">
         <div class="container">
           <div class="tb-custom-title pb-5">
-            <h2>How it work?</h2>
+            <h2>How it works</h2>
           </div>
           <div class="row">
             <!-- create new steeper to display information of how our social media work in 4 step with responsive line of horizontal and vertical-->
@@ -387,7 +387,7 @@
                     />
                   </div>
                   <div class="tb-testimonial-user-text">
-                    <h2>Dr. Shedrack Erugo</h2>
+                    <h2>Shedrack Erugo</h2>
                     <p>Founder/CEO</p>
                 </div>
 
@@ -395,19 +395,19 @@
                           style="text-decoration:auto;color: #b3182e;font-size: 40px;display: inline-block;">
                             <i class="icofont-ui-message"></i>
                           </a>
-                          <a href="https://www.facebook.com/shedrack.erugo" class="p-1"
+                          <a href="https://www.facebook.com/shedrackerugo/" class="p-1"
                           style="text-decoration:auto;color: #b3182e;font-size: 40px;display: inline-block;">
                             <i class="icofont-facebook"></i>
                           </a>
-                           <a href="https://www.facebook.com/shedrack.erugo" class="p-1"
+                           <a href="  https://www.instagram.com/_drshake_/" class="p-1"
                           style="text-decoration:auto;color: #b3182e;font-size: 40px;display: inline-block;">
                             <i class="icofont-instagram"></i>
                           </a>
-                           <a href="https://www.facebook.com/shedrack.erugo" class="p-1"
+                           <a href="http://linkedin.com/in/shedrack-erugo-4465b223b" class="p-1"
                           style="text-decoration:auto;color: #b3182e;font-size: 40px;display: inline-block;">
                             <i class="icofont-linkedin"></i>
                           </a>
-                           <a href="https://www.facebook.com/shedrack.erugo" class="p-1"
+                           <a href="https://twitter.com/ErugoShedrack" class="p-1"
                           style="text-decoration:auto;color: #b3182e;font-size: 40px;display: inline-block;">
                             <i class="icofont-twitter"></i>
                           </a>
@@ -568,16 +568,16 @@
           <div class="tb-footer-social-icon">
             <ul>
               <li>
-                <a href="#"><i class="icofont-facebook"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100091897336844"><i class="icofont-facebook"></i></a>
               </li>
               <li>
-                <a href="#"><i class="icofont-twitter"></i></a>
+                <a href="https://twitter.com/Chefeinc"><i class="icofont-twitter"></i></a>
               </li>
               <li>
                 <a href="#"><i class="icofont-instagram"></i></a>
               </li>
               <li>
-                <a href="#"><i class="icofont-linkedin"></i></a>
+                <a href="https://www.linkedin.com/company/86354235/admin/"><i class="icofont-linkedin"></i></a>
               </li>
             </ul>
           </div>
