Meet our founders change

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
     <section id="tb-testimonial-cms">
       <div class="container">
         <div class="tb-custom-title">
-          <h2>Our Team</h2>
+          <h2>Meet Our founder</h2>
         </div>
         <div class="tb-testimonial-section">
           <div class="owl-carousel owl-theme" id="testimonial">
