--- a/index.html
+++ b/index.html
@@ -269,8 +269,7 @@
               <h5 class="card-header">2. Set the Price</h5>
               <div class="card-body">
                 <p class="card-text">
-                  Set the price for your item. You can choose to sell it at cost
-                  for a profit.
+                  Set the price for your item. You can choose to sell it at a cost for profit.
                 </p>
               </div>
             </div>
