Link final changes to button

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                   without breaking the bank. Join the community today and
                  share your delicious meals, groceries , fruits, veggies etc with others.
                 </p>
-                <a href="#" class="btn-primary">Sign up</a>
+                <a href="https://app-thechefe.onrender.com/" class="btn-primary">Sign up</a>
               </div>
             </div>
           </div>
@@ -147,7 +147,7 @@
                   without breaking the bank. Join the community today and
                  share your delicious meals, groceries , fruits, veggies etc with others.
                 </p>
-                <a href="#" class="btn-primary">Sign up</a>
+                <a href="https://app-thechefe.onrender.com/" class="btn-primary">Sign up</a>
               </div>
             </div>
           </div>
