--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="container">
               <div class="tb-slider-text">
                 <img
-                  src="images/logo.png"
+                  src="images/Chefe-red-logo.png"
                   class="img-fluid"
                   alt="navbar-brand"
                   style="width: 60%"
@@ -158,7 +158,7 @@
             <div class="container">
               <div class="tb-slider-text">
                 <img
-                  src="images/logo.png"
+                  src="images/Chefe-red-logo.png"
                   class="img-fluid"
                   alt="navbar-brand"
                   style="width: 60%"
