red border line remove

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         </div>
       </div>
     </section>
-    <section id="tb-special-cms" class="cm-border-bottom-red">
+    <section id="tb-special-cms">
       <div class="container">
         <div class="row">
           <div class="col-lg-6 col-md-12">
