--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="container">
               <div class="tb-slider-text">
                 <img
-                  src="images/logo.png"
+                  src="images/logo2.png"
                   class="img-fluid"
                   alt="navbar-brand"
                   style="width: 60%"
@@ -166,7 +166,7 @@
                 <p>
                   Affordable groceries at your finger tips
                 </p>
-                <a href="https://app-thechefe.onrender.com/" class="btn-primary">Get started!</a>
+                <a href="https://app-thechefe.onrender.com/" class="btn-primary">Get Started!</a>
               </div>
             </div>
           </div>
