--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <p>
                   donate and earn with your food and groceries than waste it
                 </p>
-                <a href="https://app-thechefe.onrender.com/" class="btn-primary">Get Started</a>
+                <a href="https://app-thechefe.onrender.com/" class="btn-primary">Signup to Get started</a>
               </div>
             </div>
           </div>
@@ -142,7 +142,7 @@
                 <p>
                   Easy access to food just like your photos
                 </p>
-                <a href="https://app-thechefe.onrender.com/" class="btn-primary">Get Started</a>
+                <a href="https://app-thechefe.onrender.com/" class="btn-primary">Signup to Get started</a>
               </div>
             </div>
           </div>
@@ -166,7 +166,7 @@
                 <p>
                   Affordable groceries at your finger tips
                 </p>
-                <a href="https://app-thechefe.onrender.com/" class="btn-primary">Get Started!</a>
+                <a href="https://app-thechefe.onrender.com/" class="btn-primary">Signup to Get started</a>
               </div>
             </div>
           </div>
@@ -285,8 +285,7 @@
                 >with Chefe</span
               >
               <p>
-                Are you an aspiring chef or cooking enthusiast? Share your
-                culinary creations with the world through Chefe.
+                Browse listings in your area or filter by type of cuisine, dietary preferences, ingredients or location , reserve a food item that you want to buy or request a donation.
               </p>
               <!-- create 4 block  -->
             </div>
@@ -351,8 +350,7 @@
               <h5 class="card-header">1. Choose Your Donation</h5>
               <div class="card-body">
                 <p class="card-text">
-                  .Choose your donation ( Choose the food item you want to donate) 2. Post your
-donation
+                  Choose your donation ( Choose the food item you want to donate) 
 
                 </p>
               </div>
@@ -361,7 +359,7 @@ donation
               <h5 class="card-header">2. Post Your Donation</h5>
               <div class="card-body">
                 <p class="card-text">
-                  Wait for requests to come in from other users in your area who are in need of food.
+                  Post your donation
                 </p>
               </div>
             </div>
