--- a/index.html
+++ b/index.html
@@ -320,7 +320,8 @@
               <h5 class="card-header">4. Arrange a Pick-up</h5>
               <div class="card-body">
                 <p class="card-text">
-                  Arrange a pickup .
+                  Coordinate with the buyer for a convenient moment to pick up
+                  the food.
                 </p>
               </div>
             </div>
@@ -359,7 +360,8 @@
               <h5 class="card-header">2. Post Your Donation</h5>
               <div class="card-body">
                 <p class="card-text">
-                  Post your donation
+                  Post the details of your donation on Chefe. Include the
+                  location, time, and any other relevant information.
                 </p>
               </div>
             </div>
@@ -367,7 +369,8 @@
               <h5 class="card-header">3. Wait for Requests</h5>
               <div class="card-body">
                 <p class="card-text">
-                  Wait for requests
+                  Wait for requests to come in from other users in your area who
+                  are in need of food.
 
                 </p>
               </div>
@@ -376,7 +379,8 @@
               <h5 class="card-header">4. Coordinate the Pickup</h5>
               <div class="card-body">
                 <p class="card-text">
-                  Coordinate pick up 
+                 Arrange for the pickup of your donation with the user who
+                  requested it.
                 </p>
               </div>
             </div>
