--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <p>
                   Affordable groceries at your finger tips
                 </p>
-                <a href="https://app-thechefe.onrender.com/" class="btn-primary">Signup to Get Started</a>
+                <a href="https://app-thechefe.onrender.com/" class="btn-primary">Get Started</a>
               </div>
             </div>
           </div>
@@ -194,7 +194,7 @@
                 <p>
                   Chefe is a social network marketplace connecting consumers and
                   businesses to share and redistribute surplus food that will otherwise be discarded.
-                  Chefe not only gives you 
+                  Chefe not only gives you access to food, it empowers YOU.
                 </p>
               </div>
             </div>
