Update index.html - Add Partner logo

--- a/index.html
+++ b/index.html
@@ -479,6 +479,13 @@
                     alt="tb-testimonial-user-images"
                   />
                 </div>
+                  <div class="tb-testimonial-user-images">
+                  <img
+                    src="images/djassiafrica_logo.jpg"
+                    class="img-fluid cm-img"
+                    alt="tb-testimonial-user-images"
+                  />
+                </div>
 
                
                        
