Update index.html - change link text

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     >
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="index.html#ttb-special-cms"
+                    <a class="nav-link" href="index.html#tb-special-cms"
                       >Donation</a
                     >
                   </li>
