--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="container">
               <div class="tb-slider-text">
                 <img
-                  src="images/Chefe-red-logo.png"
+                  src="images/logo2.png"
                   class="img-fluid"
                   alt="navbar-brand"
                   style="width: 60%"
@@ -158,7 +158,7 @@
             <div class="container">
               <div class="tb-slider-text">
                 <img
-                  src="images/Chefe-red-logo.png"
+                  src="images/logo2.png"
                   class="img-fluid"
                   alt="navbar-brand"
                   style="width: 60%"
@@ -181,7 +181,7 @@
               <div class="tb-about-images">
                 <a>
                   <img
-                    src="images/tb-about-images-01.png"
+                    src="images/logo2.png"
                     class="img-fluid"
                     alt="tb-about-images"
                   />
