Update index.html -- Change ID of container

--- a/index.html
+++ b/index.html
@@ -302,13 +302,13 @@
         <div class="col-lg-6 col-md-12">
              <div class="accordion" id="accordionExample">
             <div class="accordion-item">
-              <h6 class="accordion-header" id="headingOne">
+              <h6 class="accordion-header" id="headingOneD">
                 <button class="accordion-button bg-danger text-white" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  data-bs-target="#collapseOneD" aria-expanded="true" aria-controls="collapseOneD">
                   <i class="icofont-brand-slideshare fs-2"></i> <h5> &nbsp; 1. Choose Your Donation </h5>
                 </button>
               </h6>
-              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+              <div id="collapseOneD" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                 data-bs-parent="#accordionExample">
                 <div class="accordion-body">
                  Choose your donation ( Choose the food item you want to donate)
@@ -316,13 +316,13 @@
               </div>
             </div>
             <div class="accordion-item">
-              <h5 class="accordion-header" id="headingOne2">
+              <h5 class="accordion-header" id="headingOne2D">
                 <button class="accordion-button bg-danger text-white" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseOne2" aria-expanded="false" aria-controls="collapseOne2">
+                  data-bs-target="#collapseOne2D" aria-expanded="false" aria-controls="collapseOne2D">
                  <i class="icofont-list fs-2"></i> <h5> &nbsp; 2. Post Your Donation </h5>
                 </button>
               </h5>
-              <div id="collapseOne2" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+              <div id="collapseOne2D" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                 data-bs-parent="#accordionExample">
                 <div class="accordion-body">
                  Post the details of your donation on Chefe. Include the
@@ -331,13 +331,13 @@
               </div>
             </div>
             <div class="accordion-item">
-              <h5 class="accordion-header" id="headingOne3">
+              <h5 class="accordion-header" id="headingOne3D">
                 <button class="accordion-button bg-danger text-white" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseOne3" aria-expanded="false" aria-controls="collapseOne3">
+                  data-bs-target="#collapseOne3D" aria-expanded="false" aria-controls="collapseOne3D">
                   <i class="icofont-contact-add fs-2"></i><h5> &nbsp; 3. Wait for Requests </h5>
                 </button>
               </h5>
-              <div id="collapseOne3" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+              <div id="collapseOne3D" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                 data-bs-parent="#accordionExample">
                 <div class="accordion-body">
                  Wait for requests to come in from other users in your area who
@@ -346,13 +346,13 @@
               </div>
             </div>
             <div class="accordion-item">
-              <h5 class="accordion-header" id="headingOne4">
+              <h5 class="accordion-header" id="headingOne4D">
                 <button class="accordion-button bg-danger text-white" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseOne4" aria-expanded="false" aria-controls="collapseOne4">
+                  data-bs-target="#collapseOne4D" aria-expanded="false" aria-controls="collapseOne4D">
                  <i class="icofont-fast-delivery fs-2"></i>  <h5>&nbsp; 4. Coordinate the Pickup </h5>
                 </button>
               </h5>
-              <div id="collapseOne4" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+              <div id="collapseOne4D" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                 data-bs-parent="#accordionExample">
                 <div class="accordion-body">
                   Arrange for the pickup of your donation with the user who
