Update footer email address

--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
                         </div>
                         <div class="tb-footer-contect-text">
                           <h3>Email :</h3>
-                          <a href="mailto:thechefefoodmedia@gmail.com">thechefefoodmedia@gmail.com</a>
+                          <a href="mailto:info@thechefe.com">info@thechefe.com</a>
                         </div>
                       </div>
                     </li>
