--- a/index.html
+++ b/index.html
@@ -123,9 +123,7 @@
             <div class="tb-about-text">
               <h2>Introduction to Chefe</h2>
               <p>
-                Chefe is a social networking marketplace connecting consumers and businesses to share and redistribute
-                surplus food items that will otherwise be discarded. Chefe not only gives you access to food, we empower
-                YOU.
+                Chefefeed is a food social networking marketplace combining food porn, peer-to-peer food sharing, and community building, with the aim to alleviate hunger by reducing food waste. We connect consumers, businesses, and organizations to share and redistribute surplus food items that will otherwise be discarded.
               </p>
             </div>
           </div>
