Added azure link

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <p>
                 Donate and earn with your food and groceries than waste it
               </p>
-              <a href="https://app-thechefe.onrender.com/" class="btn-primary"> Get Started</a>
+              <a href="https://app.thechefe.com/" class="btn-primary"> Get Started</a>
             </div>
           </div>
         </div>
@@ -87,7 +87,7 @@
               <p>
                 Easy access to food just like your photos
               </p>
-              <a href="https://app-thechefe.onrender.com/" class="btn-primary"> Get Started</a>
+              <a href="https://app.thechefe.com/" class="btn-primary"> Get Started</a>
             </div>
           </div>
         </div>
@@ -101,7 +101,7 @@
               <p>
                 Affordable groceries at your finger tips
               </p>
-              <a href="https://app-thechefe.onrender.com/" class="btn-primary"> Get Started</a>
+              <a href="https://app.thechefe.com/" class="btn-primary"> Get Started</a>
             </div>
           </div>
         </div>
