Update Logo chagnes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="">
         <nav class="navbar navbar-expand-lg navbar-light">
           <div class="temp">
-            <a class="navbar-brand logo" href="index.html"><img src="images/logo.png" class="img-fluid"
+            <a class="navbar-brand logo" href="index.html"><img style="width: 35%;" src="images/logo-cream.png" class="img-fluid"
                 alt="navbar-brand" /></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -68,7 +68,7 @@
           <a href="#"><img src="images/1.jpg" class="img-fluid" alt="" /></a>
           <div class="container">
             <div class="tb-slider-text">
-              <img src="images/logo-2.png" class="img-fluid" alt="navbar-brand" style="width: 60%" />
+              <img src="images/logo22.png" class="img-fluid" alt="navbar-brand" style="width: 60%" />
               <p>
                 Donate and earn with your food and groceries than waste it
               </p>
@@ -83,7 +83,7 @@
           <a href="#"><img src="images/2.jpg" class="img-fluid" alt="" /></a>
           <div class="container">
             <div class="tb-slider-text">
-              <img src="images/logo-2.png" class="img-fluid" alt="navbar-brand" style="width: 60%" />
+              <img src="images/logo22.png" class="img-fluid" alt="navbar-brand" style="width: 60%" />
               <p>
                 Easy access to food just like your photos
               </p>
@@ -97,7 +97,7 @@
           <a href="#"><img src="images/3.jpg" class="img-fluid" alt="" /></a>
           <div class="container">
             <div class="tb-slider-text">
-              <img src="images/logo-2.png" class="img-fluid" alt="navbar-brand" style="width: 60%" />
+              <img src="images/logo22.png" class="img-fluid" alt="navbar-brand" style="width: 60%" />
               <p>
                 Affordable groceries at your finger tips
               </p>
@@ -115,13 +115,13 @@
           <div class="col-md-6">
             <div class="tb-about-images">
               <a>
-                <img src="images/logo2.png" class="img-fluid" alt="tb-about-images" />
+                <img src="images/logo22.png " class="img-fluid" alt="tb-about-images" />
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="tb-about-text">
-              <h2>Introduction to Chefe</h2>
+              <h2>Introduction to Chefefeed</h2>
               <p>
                 Chefefeed is a food social networking marketplace combining food porn, peer-to-peer food sharing, and community building, with the aim to alleviate hunger by reducing food waste. We connect consumers, businesses, and organizations to share and redistribute surplus food items that will otherwise be discarded.
               </p>
