Chefe to chefefeed work replace

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Chefe - Social media food sharing</title>
+  <title>Chefefeed - Social media food sharing</title>
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/icofont.min.css" />
   <link rel="stylesheet" href="css/owl.carousel.min.css" />
@@ -150,7 +150,7 @@
               <div class="tb-servise-text">
                 <h2><a href="#">Create an Account</a></h2>
                 <p>
-                  Register with Chefe and create your profile. You can browse
+                  Register with Chefefeed and create your profile. You can browse
                   listings and post your food items
                 </p>
               </div>
@@ -210,7 +210,7 @@
           <div class="tb-special-section">
             <span class="tb-special-text1" style="color: black"></span>
             <h2>Selling</h2>
-            <span class="tb-special-text2" style="color: black">with Chefe</span>
+            <span class="tb-special-text2" style="color: black">with Chefefeed</span>
             <p>
               Browse listings in your area or filter by type of cuisine, dietary preferences, ingredients or location ,
               reserve a food item that you want to buy or request a donation.
@@ -230,7 +230,7 @@
               <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                 data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  Choose the food item or food that you want to sell on Chefe.
+                  Choose the food item or food that you want to sell on Chefefeed.
                 </div>
               </div>
             </div>
@@ -290,7 +290,7 @@
           <div class="tb-special-section">
             <span class="tb-special-text1" style="color: black"></span>
             <h3>Donating</h3>
-            <span class="tb-special-text2" style="color: black">with Chefe</span>
+            <span class="tb-special-text2" style="color: black">with Chefefeed</span>
             <p>
               Become a part of the solution, share with your community and reduce food waste
             </p>
@@ -323,7 +323,7 @@
               <div id="collapseOne2D" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                 data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                 Post the details of your donation on Chefe. Include the
+                 Post the details of your donation on Chefefeed. Include the
                 location, time, and any other relevant information.
                 </div>
               </div>
@@ -562,11 +562,11 @@
         <div class="tb-footer-copywrite">
           <p>
             Copyright © 2023
-            <a href="#URL">Chefe - Social media food sharing application</a>.
+            <a href="#URL">Chefefeed - Social media food sharing application</a>.
             All Rights Reserved.
           </p>
           <p style="font-size: 10px; text-align: justify">
-            <b>Disclaimer : </b>Chefe is a platform for food sharing that
+            <b>Disclaimer : </b>Chefefeed is a platform for food sharing that
             connects users who have surplus food with those who are in need.
             While we make every effort to ensure the safety and quality of the
             food shared through our platform, we do not assume any
