website chasnges introduction

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="tb-about-text">
               <h2>Introduction to Chefefeed</h2>
               <p>
-                Chefefeed is a food social networking marketplace combining food porn, peer-to-peer food sharing, and community building, with the aim to alleviate hunger by reducing food waste. We connect consumers, businesses, and organizations to share and redistribute surplus food items that will otherwise be discarded.
+               Chefefeed is a peer to peer food sharing marketplace with the aim to alleviate hunger by reducing household food waste. We connect consumers, businesses, and organizations to share and redistribute surplus food items that will otherwise be discarded.
               </p>
             </div>
           </div>
@@ -481,7 +481,7 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="tb-footer-logo-text">
-              <a href="index.html"><img src="images/footer-logo.png" class="img-fluid" alt="tb-footer-logo-text" /></a>
+              <a href="index.html"><img src="images/logo22.png" class="img-fluid" alt="tb-footer-logo-text" /></a>
             </div>
           </div>
           <div class="col-lg-8">
