--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="tb-footer-logo-text">
-              <a href="index.html"><img src="images/logo22.png" class="img-fluid" alt="tb-footer-logo-text" /></a>
+              <a href="index.html"><img src="images/Chefe-Home-logo-creame.png" class="img-fluid" alt="tb-footer-logo-text" /></a>
             </div>
           </div>
           <div class="col-lg-8">
