--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="tb-slider-text">
               <img src="images/logo22.png" class="img-fluid" alt="navbar-brand" style="width: 60%" />
               <p>
-                Donate and earn with your food and groceries than waste it
+                Donate and earn with your food and groceries than waste it.
               </p>
               <a href="https://app.thechefe.com/" class="btn-primary"> Get Started</a>
             </div>
